tests/NormalTests/paczka1/small_fuzzy/70104762.err
Error in line 8: IVFJF9ph A765 177,9
Error in line 15: YuXFd03I S893 174,0
